Mobile styles fix
Fixed content overflowing for mobile devices

--- a/main.css
+++ b/main.css
@@ -198,7 +198,7 @@ input#toggle {
     }
 
     h1#heading {
-        font-size: 2em;
+        font-size: 20pt;
     }
 
     div#general {
