--- a/styles1.css
+++ b/styles1.css
@@ -43,12 +43,12 @@ div.maps {
 @media only screen and (min-width : 375px) and (max-width : 667px) {
 
     h2 {
-        font-size: 19pt;
+        font-size: 16pt;
     }
 
     p {
-        font-size: 16pt;
-        line-height: 24pt;
+        font-size: 12pt;
+        line-height: 18pt;
     }
 
     div#mapContainer a {
@@ -57,6 +57,10 @@ div.maps {
 
     iframe {
         display: none
+    }
+
+    div#bodyCont {
+        height: auto;
     }
 
 }
