--- a/styles2.css
+++ b/styles2.css
@@ -26,11 +26,15 @@ article p {
 @media only screen and (min-width : 375px) and (max-width : 667px) {
 
     h2#subHeading {
-        font-size: 19pt;
+        font-size: 16pt;
     }
 
     p {
-        font-size: 16pt;
-        line-height: 24pt;
+        font-size: 12pt;
+        line-height: 18pt;
+    }
+
+    div#bodyCont {
+        height: auto;
     }
 }
