--- a/styles3.css
+++ b/styles3.css
@@ -134,4 +134,8 @@ textarea {
     a.links {
         font-size: 11pt;
     }
+
+    div#bodyCont {
+        height: auto;
+    }
 }
